kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld-aka-gp
  name: helloworld-aka-gp
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: helloworld-aka-gp
  type: ClusterIP
