kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: helloworld-aka-gp
  name: helloworld-aka-gp
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: helloworld-aka-gp
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
